ASW3: update for SID-5/21, 6/22, 7/23

--- a/JUICE-CDF-HF-SID21_sample.ipynb
+++ b/JUICE-CDF-HF-SID21_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID21 (PSSR1 rich): L1a QL -- 2025/4/10"
+    "# JUICE RPWI HF SID21 (PSSR1 rich): L1a QL -- 2025/7/5"
    ]
   },
   {
@@ -26,7 +26,7 @@
    "source": [
     "import copy\n",
     "import datetime\n",
-    "import math\n",
+    "# import math\n",
     "import matplotlib.colors as colors\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -82,8 +82,8 @@
     "# *** Dump ***\n",
     "dump_mode = 2                           # 0: no-dump  1:plot dump\n",
     "# *** CAL ***\n",
-    "unit_mode = 3                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI  4: V/m\n",
-    "band_mode = 1                           # [Power]     0: sum     1: /Hz\n",
+    "unit_mode = 2                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI  4: V/m\n",
+    "band_mode = 0                           # [Power]     0: sum     1: /Hz\n",
     "cal_mode  = 2                           # [Power]     0: background     1: CAL     2: all\n",
     "# *** Unit ***\n",
     "f_mode    = 1                           # [Frequency] 0: linear  1: log\n",
@@ -135,8 +135,8 @@
    "outputs": [],
    "source": [
     "# date='20240909'\n",
-    "date='20250331'; ver = 'V02'\n",
-    "# date='0'; ver = 'V02'\n",
+    "# date='20250331'; ver = 'V02'\n",
+    "date='0'; ver = 'V02'\n",
     "data_dir, data_name_list = juice_data.datalist(date, ver)       # [date]   yyyymmdd: group read    others: file list"
    ]
   },
@@ -186,23 +186,26 @@
     "n_time0 = data.EuEu.shape[0];   n_freq0 = data.EuEu.shape[1]\n",
     "f_min0  = data.frequency[0][0]; f_max0  = (max(np.ravel(data.frequency)))\n",
     "\n",
-    "print(\"       date and time:\", str_date)\n",
+    "if data.n_time>1: \n",
+    "    date3 = data.epoch[1];  date3 = date3.strftime('%Y/%m/%d %R:%S')\n",
+    "    print(\"       date and time:\", str_date, \"(interval:\", data.epoch[1] - data.epoch[0], date3, \")\")\n",
+    "else:\n",
+    "    print(\"       date and time:\", str_date)\n",
     "print(\"           data size:\", data.EuEu.shape, \"  [ Num-samples:\", n_time0, \"  Num-Frequency:\", n_freq0, \"]\")\n",
     "print(\"           Frequency:\", f_min0,  \"-\", f_max0, \"kHz\")\n",
     "print(\"f, width, step (kHz):\", f_min0,  \"-\", f_max0, data.freq_width[0][0], data.freq_step[0][0])\n",
-    "print(\"                      [BAND0] \", 'start {:4d} '.format(data.B0_startf[0]), 'stop {:5d} '.format(data.B0_stopf[0]), 'step {:3d} '.format(data.B0_step[0]), 'repeat {:2d} '.format(data.B0_repeat[0]),  'subdiv {:2d}'.format(data.B0_subdiv[0]), ) \n",
     "\n",
-    "if N_ch0     > 3:   N_ch0     = data.U_selected[0] + data.V_selected[0] + data.W_selected[0]\n",
+    "if N_ch0     > 3:   N_ch0     = (data.ch_selected[0] & 0b1) + ((data.ch_selected[0] & 0b10) >> 1) + ((data.ch_selected[0] & 0b100) >> 2)\n",
     "if comp_mode > 3:   comp_mode = data.complex[0]\n",
-    "print(\"                  Ch:\", N_ch0, \"  [U:\", data.U_selected[0], \"  V:\", data.V_selected[0], \"  W:\", data.W_selected[0], \"]\")\n",
+    "print(\"                  Ch:\", data.ch_selected[0])\n",
     "#\n",
-    "N_frequency = data.B0_step[0] * data.B0_subdiv[0]\n",
+    "N_frequency = data.frequency.shape[1]\n",
     "if (comp_mode == 0):\n",
     "    print(\"             complex:\", comp_mode, \" (power 2-ch) <Table 6.5.2>\")\n",
     "    N_component = N_ch0;          print(\"       ==> Component:\", N_component)\n",
     "else:\n",
     "    print(\"             complex:\", comp_mode, \" (nominal spectral matrix 2-ch) <Table 6.5.3>\")\n",
-    "    N_component = N_ch0 * N_ch0;  print(\"       ==> Component:\", N_component)"
+    "    N_component = N_ch0 * N_ch0;  print(\"       ==> Component:\", N_component)\n"
    ]
   },
   {
@@ -291,7 +294,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"N_samp:\", data.N_samp[0], \"   decimation:\", juice_cdf._sample_rate(data.decimation[0]))\n",
+    "# print(\"N_samp:\", data.N_samp[0], \"   decimation:\", juice_cdf._sample_rate(data.decimation[0]))\n",
     "if data.U_selected[n_time1//2] == 1:\n",
     "    peak_E = np.ravel(spec.EuEu[:][:]); peak_f = np.nanargmax(peak_E)\n",
     "    print(\"Peak EuEu:\", '{:.2e}'.format(peak_E[peak_f]), spec.str_unit, ' {:.2e}'.format(peak_E[peak_f]**.5), '  |  {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])), spec.str_unit, ' {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])**.5))\n",
