--- a/JUICE-CDF-HF-SID22_sample.ipynb
+++ b/JUICE-CDF-HF-SID22_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID6 & 22 (PSSR2): L1a QL -- 2025/6/30"
+    "# JUICE RPWI HF SID6 & 22 (PSSR2): L1a QL -- 2025/7/5"
    ]
   },
   {
@@ -102,7 +102,7 @@
     "# *** Ground test data ***\n",
     "date='0';  ver = 'V02'\n",
     "\n",
-    "sid = 6                    # 6 or 22\n",
+    "sid = 22                    # 6 or 22\n",
     "data_dir, data_name_list = juice_data.datalist(date, ver, sid)       # [date]   yyyymmdd: group read    others: file list"
    ]
   },
@@ -141,20 +141,23 @@
     "date1 = data.epoch[0];  date1 = date1.strftime('%Y/%m/%d %R:%S')\n",
     "date2 = data.epoch[-1]; date2 = date2.strftime('%Y/%m/%d %R:%S')\n",
     "str_date = date1 + \"  -  \" + date2;  print(str_date)\n",
-    "\n",
     "n_time = data.auto_corr.shape[0]\n",
-    "n_time0 = n_time-1\n",
-    "print(\"data size:\", data.auto_corr.shape)"
+    "n_time0 = n_time-1"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96f894ad",
+   "id": "2bffec92",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Mode \n",
+    "if data.n_time>1: \n",
+    "    date3 = data.epoch[1];  date3 = date3.strftime('%Y/%m/%d %R:%S')\n",
+    "    print(\"       date and time:\", str_date, \"(interval:\", data.epoch[1] - data.epoch[0], date3, \")\")\n",
+    "else:\n",
+    "    print(\"       date and time:\", str_date)\n",
+    "print(\"data size:\", data.auto_corr.shape)\n",
     "print(\"==> Ch:\", data.ch_selected[0], \"  Num-sweep:\", n_time, \"   Num-AutoCorr: 16    each Length:\", data.N_lag[0] )"
    ]
   },
@@ -180,7 +183,7 @@
     "\n",
     "ax1.plot(np.ravel(data.E_i[:][:]),   '-r', linewidth=.5, label='E_i')\n",
     "ax1.plot(np.ravel(data.E_q[:][:]),   '-g', linewidth=.5, label='E_q')\n",
-    "ax2.plot(np.ravel(data.freq_auto_corr[:]), linewidth=.5, label='frequency')\n",
+    "ax2.plot(np.ravel(data.frequency[:]),      linewidth=.5, label='frequency')\n",
     "ax3.plot(np.ravel(data.auto_corr[:][:]),   linewidth=.5, label='auto_corr')\n",
     "ax4.plot(np.ravel(data.time[:][:]),        linewidth=.5, label='time')\n",
     "ax5.plot(np.ravel(data.epoch[:]), '.')\n",
@@ -196,7 +199,7 @@
     "ax1.legend(loc='upper right', fontsize=8);  ax2.legend(loc='upper right', fontsize=8)\n",
     "\n",
     "# xlim=[-.5, len(np.ravel(data.auto_corr))     -.5];  print(xlim);  ax1.set_xlim(xlim)\n",
-    "# xlim=[-.5, len(np.ravel(data.freq_auto_corr))-.5];  print(xlim);  ax2.set_xlim(xlim)\n",
+    "# xlim=[-.5, len(np.ravel(data.frequency))-.5];  print(xlim);  ax2.set_xlim(xlim)\n",
     "# xlim=[-.5, len(np.ravel(data.epoch))         -.5];  print(xlim);  ax3.set_xlim(xlim)\n",
     "# ylim=[10**p_min0, 10**p_max0];  ax1.set_ylim(ylim)\n",
     "\n",
@@ -247,30 +250,30 @@
     "ax14.plot(data.time[n_sweep][13][n_lag0:], data.auto_corr[n_sweep][13][n_lag0:], linewidth=.5)\n",
     "ax15.plot(data.time[n_sweep][14][n_lag0:], data.auto_corr[n_sweep][14][n_lag0:], linewidth=.5)\n",
     "ax16.plot(data.time[n_sweep][15][n_lag0:], data.auto_corr[n_sweep][15][n_lag0:], linewidth=.5)\n",
-    "ax17.plot(data.freq_auto_corr[n_sweep][:8], data.E_i[n_sweep][:8], '.r', linewidth=.5)\n",
-    "ax17.plot(data.freq_auto_corr[n_sweep][:8], data.E_q[n_sweep][:8], '.g', linewidth=.5)\n",
-    "ax18.plot(data.freq_auto_corr[n_sweep][8:], data.E_i[n_sweep][8:], '.r', linewidth=.5)\n",
-    "ax18.plot(data.freq_auto_corr[n_sweep][8:], data.E_q[n_sweep][8:], '.g', linewidth=.5)\n",
+    "ax17.plot(data.frequency[n_sweep][:8], data.E_i[n_sweep][:8], '.r', linewidth=.5)\n",
+    "ax17.plot(data.frequency[n_sweep][:8], data.E_q[n_sweep][:8], '.g', linewidth=.5)\n",
+    "ax18.plot(data.frequency[n_sweep][8:], data.E_i[n_sweep][8:], '.r', linewidth=.5)\n",
+    "ax18.plot(data.frequency[n_sweep][8:], data.E_q[n_sweep][8:], '.g', linewidth=.5)\n",
     "\n",
     "date1 = data.epoch[n_sweep];  date1 = date1.strftime('First: %Y/%m/%d %R:%S')\n",
     "title_date = \"[\" + data_name + \"]  \" + date1;  ax2.set_title(title_date)\n",
     "#\n",
-    "ax1.set_xlabel(\"#1: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][0]))\n",
-    "ax2.set_xlabel(\"#2: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][1]))\n",
-    "ax3.set_xlabel(\"#3: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][2]))\n",
-    "ax4.set_xlabel(\"#4: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][3]))\n",
-    "ax5.set_xlabel(\"#5: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][4]))\n",
-    "ax6.set_xlabel(\"#6: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][5]))\n",
-    "ax7.set_xlabel(\"#7: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][6]))\n",
-    "ax8.set_xlabel(\"#8: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][7]))\n",
-    "ax9.set_xlabel(\"#9: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][8]))\n",
-    "ax10.set_xlabel(\"#10: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][9]))\n",
-    "ax11.set_xlabel(\"#11: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][10]))\n",
-    "ax12.set_xlabel(\"#12: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][11]))\n",
-    "ax13.set_xlabel(\"#13: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][12]))\n",
-    "ax14.set_xlabel(\"#14: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][13]))\n",
-    "ax15.set_xlabel(\"#15: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][14]))\n",
-    "ax16.set_xlabel(\"#16: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][15]))\n",
+    "ax1.set_xlabel(\"#1: {0:.0f} [kHz]\".format(data.frequency[n_sweep][0]))\n",
+    "ax2.set_xlabel(\"#2: {0:.0f} [kHz]\".format(data.frequency[n_sweep][1]))\n",
+    "ax3.set_xlabel(\"#3: {0:.0f} [kHz]\".format(data.frequency[n_sweep][2]))\n",
+    "ax4.set_xlabel(\"#4: {0:.0f} [kHz]\".format(data.frequency[n_sweep][3]))\n",
+    "ax5.set_xlabel(\"#5: {0:.0f} [kHz]\".format(data.frequency[n_sweep][4]))\n",
+    "ax6.set_xlabel(\"#6: {0:.0f} [kHz]\".format(data.frequency[n_sweep][5]))\n",
+    "ax7.set_xlabel(\"#7: {0:.0f} [kHz]\".format(data.frequency[n_sweep][6]))\n",
+    "ax8.set_xlabel(\"#8: {0:.0f} [kHz]\".format(data.frequency[n_sweep][7]))\n",
+    "ax9.set_xlabel(\"#9: {0:.0f} [kHz]\".format(data.frequency[n_sweep][8]))\n",
+    "ax10.set_xlabel(\"#10: {0:.0f} [kHz]\".format(data.frequency[n_sweep][9]))\n",
+    "ax11.set_xlabel(\"#11: {0:.0f} [kHz]\".format(data.frequency[n_sweep][10]))\n",
+    "ax12.set_xlabel(\"#12: {0:.0f} [kHz]\".format(data.frequency[n_sweep][11]))\n",
+    "ax13.set_xlabel(\"#13: {0:.0f} [kHz]\".format(data.frequency[n_sweep][12]))\n",
+    "ax14.set_xlabel(\"#14: {0:.0f} [kHz]\".format(data.frequency[n_sweep][13]))\n",
+    "ax15.set_xlabel(\"#15: {0:.0f} [kHz]\".format(data.frequency[n_sweep][14]))\n",
+    "ax16.set_xlabel(\"#16: {0:.0f} [kHz]\".format(data.frequency[n_sweep][15]))\n",
     "ax17.set_xlabel(\"frequency [kHz]\");  ax18.set_xlabel(\"frequency [kHz]\")\n",
     "\n",
     "fig.subplots_adjust(hspace=.3)\n",
@@ -318,30 +321,30 @@
     "ax14.plot(data.time[n_sweep][13][n_lag0:], data.auto_corr[n_sweep][13][n_lag0:], linewidth=.5)\n",
     "ax15.plot(data.time[n_sweep][14][n_lag0:], data.auto_corr[n_sweep][14][n_lag0:], linewidth=.5)\n",
     "ax16.plot(data.time[n_sweep][15][n_lag0:], data.auto_corr[n_sweep][15][n_lag0:], linewidth=.5)\n",
-    "ax17.plot(data.freq_auto_corr[n_sweep][:8], data.E_i[n_sweep][:8], '.r', linewidth=.5)\n",
-    "ax17.plot(data.freq_auto_corr[n_sweep][:8], data.E_q[n_sweep][:8], '.g', linewidth=.5)\n",
-    "ax18.plot(data.freq_auto_corr[n_sweep][8:], data.E_i[n_sweep][8:], '.r', linewidth=.5)\n",
-    "ax18.plot(data.freq_auto_corr[n_sweep][8:], data.E_q[n_sweep][8:], '.g', linewidth=.5)\n",
+    "ax17.plot(data.frequency[n_sweep][:8], data.E_i[n_sweep][:8], '.r', linewidth=.5)\n",
+    "ax17.plot(data.frequency[n_sweep][:8], data.E_q[n_sweep][:8], '.g', linewidth=.5)\n",
+    "ax18.plot(data.frequency[n_sweep][8:], data.E_i[n_sweep][8:], '.r', linewidth=.5)\n",
+    "ax18.plot(data.frequency[n_sweep][8:], data.E_q[n_sweep][8:], '.g', linewidth=.5)\n",
     "\n",
     "date1 = data.epoch[n_sweep];  date1 = date1.strftime('First: %Y/%m/%d %R:%S')\n",
     "title_date = \"[\" + data_name + \"]  \" + date1;  ax2.set_title(title_date)\n",
     "#\n",
-    "ax1.set_xlabel(\"#1: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][0]))\n",
-    "ax2.set_xlabel(\"#2: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][1]))\n",
-    "ax3.set_xlabel(\"#3: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][2]))\n",
-    "ax4.set_xlabel(\"#4: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][3]))\n",
-    "ax5.set_xlabel(\"#5: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][4]))\n",
-    "ax6.set_xlabel(\"#6: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][5]))\n",
-    "ax7.set_xlabel(\"#7: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][6]))\n",
-    "ax8.set_xlabel(\"#8: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][7]))\n",
-    "ax9.set_xlabel(\"#9: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][8]))\n",
-    "ax10.set_xlabel(\"#10: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][9]))\n",
-    "ax11.set_xlabel(\"#11: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][10]))\n",
-    "ax12.set_xlabel(\"#12: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][11]))\n",
-    "ax13.set_xlabel(\"#13: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][12]))\n",
-    "ax14.set_xlabel(\"#14: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][13]))\n",
-    "ax15.set_xlabel(\"#15: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][14]))\n",
-    "ax16.set_xlabel(\"#16: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][15]))\n",
+    "ax1.set_xlabel(\"#1: {0:.0f} [kHz]\".format(data.frequency[n_sweep][0]))\n",
+    "ax2.set_xlabel(\"#2: {0:.0f} [kHz]\".format(data.frequency[n_sweep][1]))\n",
+    "ax3.set_xlabel(\"#3: {0:.0f} [kHz]\".format(data.frequency[n_sweep][2]))\n",
+    "ax4.set_xlabel(\"#4: {0:.0f} [kHz]\".format(data.frequency[n_sweep][3]))\n",
+    "ax5.set_xlabel(\"#5: {0:.0f} [kHz]\".format(data.frequency[n_sweep][4]))\n",
+    "ax6.set_xlabel(\"#6: {0:.0f} [kHz]\".format(data.frequency[n_sweep][5]))\n",
+    "ax7.set_xlabel(\"#7: {0:.0f} [kHz]\".format(data.frequency[n_sweep][6]))\n",
+    "ax8.set_xlabel(\"#8: {0:.0f} [kHz]\".format(data.frequency[n_sweep][7]))\n",
+    "ax9.set_xlabel(\"#9: {0:.0f} [kHz]\".format(data.frequency[n_sweep][8]))\n",
+    "ax10.set_xlabel(\"#10: {0:.0f} [kHz]\".format(data.frequency[n_sweep][9]))\n",
+    "ax11.set_xlabel(\"#11: {0:.0f} [kHz]\".format(data.frequency[n_sweep][10]))\n",
+    "ax12.set_xlabel(\"#12: {0:.0f} [kHz]\".format(data.frequency[n_sweep][11]))\n",
+    "ax13.set_xlabel(\"#13: {0:.0f} [kHz]\".format(data.frequency[n_sweep][12]))\n",
+    "ax14.set_xlabel(\"#14: {0:.0f} [kHz]\".format(data.frequency[n_sweep][13]))\n",
+    "ax15.set_xlabel(\"#15: {0:.0f} [kHz]\".format(data.frequency[n_sweep][14]))\n",
+    "ax16.set_xlabel(\"#16: {0:.0f} [kHz]\".format(data.frequency[n_sweep][15]))\n",
     "ax17.set_xlabel(\"frequency [kHz]\");  ax18.set_xlabel(\"frequency [kHz]\")\n",
     "\n",
     "fig.subplots_adjust(hspace=.3)\n",
@@ -390,30 +393,30 @@
     "ax14.plot(data.time[n_sweep][13][n_lag0:], data.auto_corr[n_sweep][13][n_lag0:], linewidth=.5)\n",
     "ax15.plot(data.time[n_sweep][14][n_lag0:], data.auto_corr[n_sweep][14][n_lag0:], linewidth=.5)\n",
     "ax16.plot(data.time[n_sweep][15][n_lag0:], data.auto_corr[n_sweep][15][n_lag0:], linewidth=.5)\n",
-    "ax17.plot(data.freq_auto_corr[n_sweep][:8], data.E_i[n_sweep][:8], '.r', linewidth=.5)\n",
-    "ax17.plot(data.freq_auto_corr[n_sweep][:8], data.E_q[n_sweep][:8], '.g', linewidth=.5)\n",
-    "ax18.plot(data.freq_auto_corr[n_sweep][8:], data.E_i[n_sweep][8:], '.r', linewidth=.5)\n",
-    "ax18.plot(data.freq_auto_corr[n_sweep][8:], data.E_q[n_sweep][8:], '.g', linewidth=.5)\n",
+    "ax17.plot(data.frequency[n_sweep][:8], data.E_i[n_sweep][:8], '.r', linewidth=.5)\n",
+    "ax17.plot(data.frequency[n_sweep][:8], data.E_q[n_sweep][:8], '.g', linewidth=.5)\n",
+    "ax18.plot(data.frequency[n_sweep][8:], data.E_i[n_sweep][8:], '.r', linewidth=.5)\n",
+    "ax18.plot(data.frequency[n_sweep][8:], data.E_q[n_sweep][8:], '.g', linewidth=.5)\n",
     "\n",
     "date1 = data.epoch[n_sweep];  date1 = date1.strftime('First: %Y/%m/%d %R:%S')\n",
     "title_date = \"[\" + data_name + \"]  \" + date1;  ax2.set_title(title_date)\n",
     "#\n",
-    "ax1.set_xlabel(\"#1: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][0]))\n",
-    "ax2.set_xlabel(\"#2: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][1]))\n",
-    "ax3.set_xlabel(\"#3: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][2]))\n",
-    "ax4.set_xlabel(\"#4: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][3]))\n",
-    "ax5.set_xlabel(\"#5: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][4]))\n",
-    "ax6.set_xlabel(\"#6: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][5]))\n",
-    "ax7.set_xlabel(\"#7: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][6]))\n",
-    "ax8.set_xlabel(\"#8: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][7]))\n",
-    "ax9.set_xlabel(\"#9: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][8]))\n",
-    "ax10.set_xlabel(\"#10: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][9]))\n",
-    "ax11.set_xlabel(\"#11: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][10]))\n",
-    "ax12.set_xlabel(\"#12: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][11]))\n",
-    "ax13.set_xlabel(\"#13: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][12]))\n",
-    "ax14.set_xlabel(\"#14: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][13]))\n",
-    "ax15.set_xlabel(\"#15: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][14]))\n",
-    "ax16.set_xlabel(\"#16: {0:.0f} [kHz]\".format(data.freq_auto_corr[n_sweep][15]))\n",
+    "ax1.set_xlabel(\"#1: {0:.0f} [kHz]\".format(data.frequency[n_sweep][0]))\n",
+    "ax2.set_xlabel(\"#2: {0:.0f} [kHz]\".format(data.frequency[n_sweep][1]))\n",
+    "ax3.set_xlabel(\"#3: {0:.0f} [kHz]\".format(data.frequency[n_sweep][2]))\n",
+    "ax4.set_xlabel(\"#4: {0:.0f} [kHz]\".format(data.frequency[n_sweep][3]))\n",
+    "ax5.set_xlabel(\"#5: {0:.0f} [kHz]\".format(data.frequency[n_sweep][4]))\n",
+    "ax6.set_xlabel(\"#6: {0:.0f} [kHz]\".format(data.frequency[n_sweep][5]))\n",
+    "ax7.set_xlabel(\"#7: {0:.0f} [kHz]\".format(data.frequency[n_sweep][6]))\n",
+    "ax8.set_xlabel(\"#8: {0:.0f} [kHz]\".format(data.frequency[n_sweep][7]))\n",
+    "ax9.set_xlabel(\"#9: {0:.0f} [kHz]\".format(data.frequency[n_sweep][8]))\n",
+    "ax10.set_xlabel(\"#10: {0:.0f} [kHz]\".format(data.frequency[n_sweep][9]))\n",
+    "ax11.set_xlabel(\"#11: {0:.0f} [kHz]\".format(data.frequency[n_sweep][10]))\n",
+    "ax12.set_xlabel(\"#12: {0:.0f} [kHz]\".format(data.frequency[n_sweep][11]))\n",
+    "ax13.set_xlabel(\"#13: {0:.0f} [kHz]\".format(data.frequency[n_sweep][12]))\n",
+    "ax14.set_xlabel(\"#14: {0:.0f} [kHz]\".format(data.frequency[n_sweep][13]))\n",
+    "ax15.set_xlabel(\"#15: {0:.0f} [kHz]\".format(data.frequency[n_sweep][14]))\n",
+    "ax16.set_xlabel(\"#16: {0:.0f} [kHz]\".format(data.frequency[n_sweep][15]))\n",
     "ax17.set_xlabel(\"frequency [kHz]\");  ax18.set_xlabel(\"frequency [kHz]\")\n",
     "\n",
     "fig.subplots_adjust(hspace=.3)\n",
@@ -421,6 +424,71 @@
     "if dump_mode == 1:\n",
     "    png_fname = work_dir+data_name+'_last.png'\n",
     "    fig.savefig(png_fname)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12a59fe4",
+   "metadata": {},
+   "source": [
+    "## Overall"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84b22ecf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print(data.E_i.shape, data.n_time, data.N_step[0])\n",
+    "E_i_2d = data.E_i.transpose()\n",
+    "E_q_2d = data.E_q.transpose()\n",
+    "\n",
+    "num_x = np.arange(data.n_time)\n",
+    "num_y = data.frequency[0]\n",
+    "# num_y = np.arange(data.N_step[0])\n",
+    "\n",
+    "fig2d = plt.figure(figsize=[16,11])\n",
+    "ax1 = fig2d.add_subplot(2, 1, 1);   ax2 = fig2d.add_subplot(2, 1, 2); \n",
+    "ax1.set_yscale('log');              ax2.set_yscale('log')\n",
+    "\n",
+    "p1 = ax1.pcolormesh(num_x, num_y, E_i_2d, cmap='bwr');  pp1 = fig2d.colorbar(p1, ax=ax1, orientation=\"vertical\")\n",
+    "p2 = ax2.pcolormesh(num_x, num_y, E_q_2d, cmap='bwr');  pp2 = fig2d.colorbar(p1, ax=ax2, orientation=\"vertical\")\n",
+    "\n",
+    "# Plot\n",
+    "fig2d.show\n",
+    "if dump_mode == 1:\n",
+    "    png_fname = work_dir+data_name+'_overall_E.png'\n",
+    "    fig2d.savefig(png_fname)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a64775e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print(data.auto_corr.shape, data.n_time, data.N_step[0], data.N_lag[0])\n",
+    "auto_corr_2d = data.auto_corr.reshape(n_time, data.N_step[0]*data.N_lag[0])\n",
+    "auto_corr_2d = auto_corr_2d.transpose()\n",
+    "print(data.auto_corr.shape, data.n_time, data.N_step[0], data.N_lag[0], auto_corr_2d.shape)\n",
+    "\n",
+    "num_x = np.arange(data.n_time)\n",
+    "num_y = np.arange(data.N_step[0] * data.N_lag[0])\n",
+    "\n",
+    "fig2d = plt.figure(figsize=[16,11])\n",
+    "ax1 = fig2d.add_subplot(1, 1, 1); \n",
+    "\n",
+    "p1 = ax1.pcolormesh(num_x, num_y, auto_corr_2d, cmap='bwr')\n",
+    "pp1 = fig2d.colorbar(p1, ax=ax1, orientation=\"vertical\")\n",
+    "\n",
+    "# Plot\n",
+    "fig2d.show\n",
+    "if dump_mode == 1:\n",
+    "    png_fname = work_dir+data_name+'_overall.png'\n",
+    "    fig2d.savefig(png_fname)"
    ]
   }
  ],
