--- a/JUICE-CDF-HF-SID23_sample.ipynb
+++ b/JUICE-CDF-HF-SID23_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID23 (PSSR3 rich): L1a QL -- 2025/6/30"
+    "# JUICE RPWI HF SID23 (PSSR3 rich): L1a QL -- 2025/7/5"
    ]
   },
   {
@@ -25,8 +25,8 @@
    "outputs": [],
    "source": [
     "import copy\n",
-    "import numpy as np\n",
     "import sys\n",
+    "import numpy as np\n",
     "import matplotlib.colors as colors\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib import gridspec"
@@ -81,8 +81,8 @@
     "# *** Plot dump ***\n",
     "dump_mode = 0                           # 0: no-dump  1:plot dump\n",
     "# *** CAL set ***\n",
-    "unit_mode = 4                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI  4: V/m\n",
-    "band_mode = 1                           # [Power]     0: sum     1: /Hz\n",
+    "unit_mode = 2                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI  4: V/m\n",
+    "band_mode = 0                           # [Power]     0: sum     1: /Hz\n",
     "cal_mode  = 2                           # [Power]     0: background   1: CAL     2: all\n",
     "# *** Unit set ***\n",
     "f_mode    = 1                           # [Frequency] 0: linear  1: log\n",
@@ -166,18 +166,27 @@
    "outputs": [],
    "source": [
     "data = juice_sid23.hf_sid23_shaping(data, f_max, f_min)\n",
-    "\n",
     "date1 = data.epoch[0];  date1 = date1.strftime('%Y/%m/%d %R:%S')\n",
     "date2 = data.epoch[-1]; date2 = date2.strftime('%Y/%m/%d %R:%S')\n",
     "str_date = date1 + \"  -  \" + date2\n",
-    "\n",
     "n_time0 = data.n_time;  n_block0 = data.time.shape[1];  n_length0 = data.time.shape[2]\n",
-    "n_num0  = n_block0 * n_length0 \n",
-    "\n",
-    "print(\"       date and time:\", str_date)\n",
+    "n_num0  = n_block0 * n_length0 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6d85934",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if data.n_time>1: \n",
+    "    date3 = data.epoch[1];  date3 = date3.strftime('%Y/%m/%d %R:%S')\n",
+    "    print(\"       date and time:\", str_date, \"(interval:\", data.epoch[1] - data.epoch[0], date3, \")\")\n",
+    "else:\n",
+    "    print(\"       date and time:\", str_date)\n",
     "print(\"           data size:\", data.Eu_i.shape, \"  [ Num-samples:\", n_time0, \"  Num-Block:\", n_block0, \" * Length:\", n_length0, \" = Num:\", n_num0, \"]\")\n",
-    "print(\"         time_length:\", data.time.shape, \"  [\", data.time[0][0][n_length0-1], data.time[0][1][0], \"sec in 1-block\", data.time[0][n_block0-1][n_length0-1], \"sec in total\")\n",
-    "print(\"                  Ch:\", data.ch_selected[0])"
+    "print(\"         time_length:\", data.time.shape, \"  [\", data.time[0][0][n_length0-1], data.time[0][1][0], \"sec in 1-block\", data.time[0][n_block0-1][n_length0-1], \"sec in total\")"
    ]
   },
   {
@@ -208,14 +217,14 @@
     "        data.EE[i] = data.EuEu[i] + data.EvEv[i] + data.EwEw[i]\n",
     "                    #  * data.U_selected[i] + \n",
     "\n",
-    "        for j in range(data.N_block[0]):\n",
+    "        for j in range(data.n_block):\n",
     "            EE_med = np.median(data.EE[i][j]);  EE_peak = max(data.EE[i][j])\n",
     "            index = np.where(data.EE[i][j] <  EE_med * thres);  data.EE_flag[i][j][index] = 0   # EE_med\n",
     "            index = np.where(data.EE[i][j] >= EE_med * thres);  data.EE_flag[i][j][index] = 1   # EE_peak1 \n",
     "\n",
     "            # Short off (<40): treated as ON\n",
     "            k_off = 0\n",
-    "            for k in range(data.N_feed[0]*128):\n",
+    "            for k in range(data.n_feed*128):\n",
     "                if k > 0:\n",
     "                    if data.EE_flag[i][j][k-1] < data.EE_flag[i][j][k]:     # ON\n",
     "                        if k - k_off < 40:\n",
@@ -225,7 +234,7 @@
     "\n",
     "            \"\"\"\n",
     "            # Short on (<400: treated as OFF\n",
-    "            for k in range(data.N_feed[0]*128):\n",
+    "            for k in range(data.n_feed*128):\n",
     "                if k > 0:\n",
     "                    if data.EE_flag[i][j][k-1] > data.EE_flag[i][j][k]:     # off\n",
     "                        if k - k_on < 40:\n",
@@ -237,7 +246,7 @@
     "            # DIS before/after ON\n",
     "            k_on = 0\n",
     "            k_off = 0\n",
-    "            for k in range(data.N_feed[0]*128):\n",
+    "            for k in range(data.n_feed*128):\n",
     "                if k > 0:\n",
     "                    if data.EE_flag[i][j][k-1] < data.EE_flag[i][j][k]:     # ON\n",
     "                        k_on = k\n",
@@ -246,10 +255,10 @@
     "                        #    print(k, k_off, k_on)\n",
     "                        if k_on -8 > 0:\n",
     "                            data.EE_flag[i][j][k_on-8:k_on]   = 1\n",
-    "                        if k_off+8 < data.N_feed[0]*128:\n",
+    "                        if k_off+8 < data.n_feed*128:\n",
     "                            data.EE_flag[i][j][k_off:k_off+8] = 1\n",
     "                        k_off = k\n",
-    "            if k_off!=0 and k_off+10 < data.N_feed[0]*128:\n",
+    "            if k_off!=0 and k_off+10 < data.n_feed*128:\n",
     "                data.EE_flag[i][j][k_off:k_off+10] = 1\n",
     "\n",
     "\n",
@@ -270,7 +279,7 @@
     "    #\n",
     "    n_sweep = 1\n",
     "    n_block = 9 # n_block0\n",
-    "    print(\"[specific block]  SWEEP:\", n_sweep, \"in total of \", n_time0, \"   Block:\", n_block, \"in total of \", data.N_block[0])\n",
+    "    print(\"[specific block]  SWEEP:\", n_sweep, \"in total of \", n_time0, \"   Block:\", n_block, \"in total of \", data.n_block)\n",
     "\n",
     "    fig = plt.figure(figsize=(14, 11))\n",
     "    ax1 = fig.add_subplot(4, 1, 1);  ax2 = fig.add_subplot(4, 1, 2);  ax3 = fig.add_subplot(4, 1, 3);  ax4 = fig.add_subplot(4, 1, 4)\n",
@@ -351,7 +360,7 @@
     "\n",
     "    print(\"frequency cutoff(Hz):\", f_cut, \"   delay:\", dt * f_tap )\n",
     "    for i in range(data.n_time):\n",
-    "        for j in range(data.N_block[0]):\n",
+    "        for j in range(data.n_block):\n",
     "            data.Eu_i[i][j] = signal.lfilter(filter, 1, data.Eu_i[i][j]);  data.Eu_q[i][j] = signal.lfilter(filter, 1, data.Eu_q[i][j])\n",
     "            data.Ev_i[i][j] = signal.lfilter(filter, 1, data.Ev_i[i][j]);  data.Ev_q[i][j] = signal.lfilter(filter, 1, data.Ev_q[i][j])\n",
     "            data.Ew_i[i][j] = signal.lfilter(filter, 1, data.Ew_i[i][j]);  data.Ew_q[i][j] = signal.lfilter(filter, 1, data.Ew_q[i][j])"
@@ -387,7 +396,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"decimation:\", juice_cdf._sample_rate(data.decimation[0]))\n",
+    "# print(\"decimation:\", juice_cdf._sample_rate(data.decimation[0]))\n",
     "print(\"Peak Eu:\", '{:.2e}'.format(np.nanmax(wave.Eu_i)), ' {:.2e}'.format(np.nanmax(wave.Eu_q)), wave.str_unit)\n",
     "print(\"Peak Ev:\", '{:.2e}'.format(np.nanmax(wave.Ev_i)), ' {:.2e}'.format(np.nanmax(wave.Ev_q)), wave.str_unit)\n",
     "print(\"Peak Ew:\", '{:.2e}'.format(np.nanmax(wave.Ew_i)), ' {:.2e}'.format(np.nanmax(wave.Ew_q)), wave.str_unit)"
@@ -447,7 +456,7 @@
    "source": [
     "n_sweep = n_time0//2\n",
     "n_block = n_block0\n",
-    "print(\"[specific sweep]  SWEEP:\", n_sweep, \"in total of\", n_time0, \"   Block:\", n_block, \"in total of\", data.N_block[0])\n",
+    "print(\"[specific sweep]  SWEEP:\", n_sweep, \"in total of\", n_time0, \"   Block:\", n_block, \"in total of\", data.n_block)\n",
     "\n",
     "fig = plt.figure(figsize=(14, 11))\n",
     "ax1 = fig.add_subplot(4, 1, 1);  ax2 = fig.add_subplot(4, 1, 2);  ax3 = fig.add_subplot(4, 1, 3);  ax4 = fig.add_subplot(4, 1, 4);  \n",
@@ -463,7 +472,7 @@
     "ax4.legend(loc='upper right', fontsize=8)\n",
     "date = data.epoch[n_sweep];  date = date.strftime('%Y/%m/%d %R:%S');  ax4.set_xlabel(date)\n",
     "\n",
-    "xlim=[-0.5, n_block*data.N_feed[0]*128                   -.5];  print(xlim);  ax1.set_xlim(xlim);  ax2.set_xlim(xlim);  ax3.set_xlim(xlim)\n",
+    "xlim=[-0.5, n_block*data.n_feed*128                   -.5];  print(xlim);  ax1.set_xlim(xlim);  ax2.set_xlim(xlim);  ax3.set_xlim(xlim)\n",
     "xlim=[-0.5, len(np.ravel(data.time[n_sweep][0:n_block])) -.5];  print(xlim);  ax4.set_xlim(xlim)\n",
     "# ylim=[-10**(p_raw_max-3.5), 10**(p_raw_max-3.5)]\n",
     "# ax1.set_ylim(ylim);  ax3.set_ylim(ylim);  ax5.set_ylim(ylim)\n",
@@ -491,7 +500,7 @@
    "source": [
     "n_sweep = n_time0//2\n",
     "n_block = 0\n",
-    "print(\"[specific block]  SWEEP:\", n_sweep, \"in total of \", n_time0, \"   Block:\", n_block, \"in total of \", data.N_block[0])\n",
+    "print(\"[specific block]  SWEEP:\", n_sweep, \"in total of \", n_time0, \"   Block:\", n_block, \"in total of \", data.n_block)\n",
     "\n",
     "fig = plt.figure(figsize=(14, 11))\n",
     "ax1 = fig.add_subplot(3, 1, 1);  ax2 = fig.add_subplot(3, 1, 2);  ax3 = fig.add_subplot(3, 1, 3)\n",
@@ -508,7 +517,7 @@
     "date = data.epoch[n_sweep];  date = date.strftime('%Y/%m/%d %R:%S') + \"    time [sec]  (0.001sec delay = 150-km distance)\";  ax3.set_xlabel(date)\n",
     "\n",
     "xlim=[data.time[n_sweep][n_block][0], data.time[n_sweep][n_block][-1]];  print(xlim);  ax1.set_xlim(xlim);  ax2.set_xlim(xlim);  ax3.set_xlim(xlim)\n",
-    "# xlim=[0.002, 0.003]; ax1.set_xlim(xlim);  ax2.set_xlim(xlim);  ax3.set_xlim(xlim)   # 0.28msec\n",
+    "# xlim=[0.00, 0.0001]; ax1.set_xlim(xlim);  ax2.set_xlim(xlim);  ax3.set_xlim(xlim)   # 0.28msec\n",
     "# xlim=[0.00159, 0.00187]   # 0.28msec\n",
     "# xlim=[334, 415]             # 81 * 3.37837832e-06 = 0.28msec\n",
     "# ylim=[-10**(p_raw_max-3.5), 10**(p_raw_max-3.5)];  ax1.set_ylim(ylim);  ax3.set_ylim(ylim);  ax5.set_ylim(ylim)\n",
@@ -525,6 +534,16 @@
    "metadata": {},
    "source": [
     "# Spectrum Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "809eaead",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.time[0][0]"
    ]
   },
   {
@@ -596,7 +615,7 @@
    "source": [
     "n_sweep = np.int16(n_time0/2)\n",
     "n_block = 0\n",
-    "print(\"[specific block]  SWEEP:\", n_sweep, \"in total of \", n_time0, \"   Block:\", n_block, \"in total of \", data.N_block[0])\n",
+    "print(\"[specific block]  SWEEP:\", n_sweep, \"in total of \", n_time0, \"   Block:\", n_block, \"in total of \", data.n_block)\n",
     "\n",
     "fig = plt.figure(figsize=(14, 11));  ax1 = fig.add_subplot(1, 1, 1)\n",
     "\n",
@@ -609,7 +628,7 @@
     "date = data.epoch[n_sweep];  date = date.strftime('%Y/%m/%d %R:%S') + \"    time [sec]  (0.001sec delay = 150-km distance)\";  ax1.set_xlabel(date)\n",
     "\n",
     "xlim=[data.time[n_sweep][n_block][0], data.time[n_sweep][n_block][-1]];  \n",
-    "# xlim=[0.0027, 0.0033]   # 0.28msec\n",
+    "# xlim=[0.000, 0.0033]   # 0.28msec\n",
     "print(xlim);  ax1.set_xlim(xlim)\n",
     "# xlim=[334, 415]           # 81 * 3.37837832e-06 = 0.28msec\n",
     "# ylim=[-10**(p_raw_max-3.5), 10**(p_raw_max-3.5)]; ax1.set_ylim(ylim);  ax3.set_ylim(ylim);  ax5.set_ylim(ylim)\n",
@@ -796,7 +815,7 @@
    "source": [
     "n_sweep = n_time0-1;  print(\"[last]  SWEEP:\", n_num0, \"in total of\", n_time0)\n",
     "p_min = p_min1-2;  p_max = p_max1\n",
-    "p_min = -12.0;    p_max = -6.0\n",
+    "# p_min = -12.0;    p_max = -6.0\n",
     "f_min = spec.freq[n_sweep][0][0];  f_max = spec.freq[n_sweep][0][-1]; d_freq = spec.freq[n_sweep][0][1]-spec.freq[n_sweep][0][0]\n",
     "\n",
     "fig = plt.figure(figsize=(14, 11))\n",
