--- a/JUICE-CDF-HF-SID3_sample.ipynb
+++ b/JUICE-CDF-HF-SID3_sample.ipynb
@@ -6,7 +6,7 @@
    "id": "a116756d",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID3 (Full): L1a QL for ASW1/2/3 -- 2025/4/6"
+    "# JUICE RPWI HF SID3 (Full): L1a QL for ASW1/2/3 -- 2025/6/30"
    ]
   },
   {
@@ -77,7 +77,7 @@
     "# *** Dump ***\n",
     "dump_mode = 2                           # 0: no-dump  1:plot dump\n",
     "# *** CAL ***\n",
-    "unit_mode = 0                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI  4: V/m\n",
+    "unit_mode = 2                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI  4: V/m\n",
     "band_mode = 0                           # [Power]     0: sum     1: /Hz\n",
     "cal_mode  = 2                           # [Power]     0: background     1: CAL     2: all\n",
     "# *** Unit ***\n",
@@ -142,9 +142,9 @@
     "# date='20240820';  ver = 'V02'\n",
     "# date='20240822';  ver = 'V02'   # CAL\n",
     "# date='20240823';  ver = 'V02'\n",
-    "date='20240909';  ver = 'V02'\n",
+    "# date='20240909';  ver = 'V02'\n",
     "# date='20250331';  ver = 'V02'\n",
-    "# date='0';         ver = 'V02'   # Test data\n",
+    "date='0';         ver = 'V02'   # Test data\n",
     "data_dir, data_name_list = juice_data.datalist(date, ver)       # [date]   yyyymmdd: group read    others: file list"
    ]
   },
@@ -194,15 +194,14 @@
     "n_time0 = data.EuEu.shape[0];    n_freq0 = data.EuEu.shape[1]\n",
     "f_min0  = data.frequency[0][0];  f_max0  = (max(np.ravel(data.frequency)))\n",
     "\n",
-    "print(\"       date and time:\", str_date)\n",
+    "if data.n_time>1: \n",
+    "    date3 = data.epoch[1];  date3 = date3.strftime('%Y/%m/%d %R:%S')\n",
+    "    print(\"       date and time:\", str_date, \"(interval:\", data.epoch[1] - data.epoch[0], date3, \")\")\n",
+    "else:\n",
+    "    print(\"       date and time:\", str_date)\n",
     "print(\"           data size:\", data.EuEu.shape, \"  [ Num-samples:\", n_time0, \"  Num-Frequency:\", n_freq0, \"]\")\n",
     "print(\"           Frequency:\", f_min0,  \"-\", f_max0, \"kHz\")\n",
     "print(\"f, width, step (kHz):\", f_min0,  \"-\", f_max0, data.freq_width[0][0], data.freq_step[0][0])\n",
-    "print(\"                      [BAND0] \", 'start {:4d} '.format(data.B0_startf[0]), 'stop {:5d} '.format(data.B0_stopf[0]), 'step {:3d} '.format(data.B0_step[0]), 'repeat {:2d} '.format(data.B0_repeat[0]),  'subdiv {:2d}'.format(data.B0_subdiv[0]), ) \n",
-    "print(\"                      [BAND1] \", 'start {:4d} '.format(data.B1_startf[0]), 'stop {:5d} '.format(data.B1_stopf[0]), 'step {:3d} '.format(data.B1_step[0]), 'repeat {:2d} '.format(data.B1_repeat[0]),  'subdiv {:2d}'.format(data.B1_subdiv[0]), ) \n",
-    "print(\"                      [BAND2] \", 'start {:4d} '.format(data.B2_startf[0]), 'stop {:5d} '.format(data.B2_stopf[0]), 'step {:3d} '.format(data.B2_step[0]), 'repeat {:2d} '.format(data.B2_repeat[0]),  'subdiv {:2d}'.format(data.B2_subdiv[0]), ) \n",
-    "print(\"                      [BAND3] \", 'start {:4d} '.format(data.B3_startf[0]), 'stop {:5d} '.format(data.B3_stopf[0]), 'step {:3d} '.format(data.B3_step[0]), 'repeat {:2d} '.format(data.B3_repeat[0]),  'subdiv {:2d}'.format(data.B3_subdiv[0]), ) \n",
-    "print(\"                      [BAND4] \", 'start {:4d} '.format(data.B4_startf[0]), 'stop {:5d} '.format(data.B4_stopf[0]), 'step {:3d} '.format(data.B4_step[0]), 'repeat {:2d} '.format(data.B4_repeat[0]),  'subdiv {:2d}'.format(data.B4_subdiv[0]), ) \n",
     "\n",
     "if N_ch0     > 3:   N_ch0     = data.U_selected[0] + data.V_selected[0] + data.W_selected[0]\n",
     "if comp_mode > 3:   comp_mode = data.complex[0]\n",
