--- a/JUICE-CDF-HF-SID5_sample.ipynb
+++ b/JUICE-CDF-HF-SID5_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID5 (PSSR1 surv): L1a QL -- 2025/4/7"
+    "# JUICE RPWI HF SID5 (PSSR1 surv): L1a QL -- 2025/7/5"
    ]
   },
   {
@@ -82,8 +82,8 @@
     "dump_mode = 2                           # 0: no-dump  1:plot dump\n",
     "# *** CAL ***\n",
     "unit_mode = 2                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI  4: V/m\n",
-    "band_mode = 1                           # [Power]     0: sum     1: /Hz\n",
-    "cal_mode  = 0                           # [Power]     0: background     1: CAL     2: all\n",
+    "band_mode = 0                           # [Power]     0: sum     1: /Hz\n",
+    "cal_mode  = 2                           # [Power]     0: background     1: CAL     2: all\n",
     "# *** Unit ***\n",
     "f_mode    = 1                           # [Frequency] 0: linear  1: log\n",
     "time_mode = 1                           # [Time]      0: Epoch   1: data number\n",
@@ -178,12 +178,11 @@
     "print(\"           data size:\", data.EE.shape, \"  [ Num-samples:\", n_time0, \"  Num-Frequency:\", n_freq0, \"]\")\n",
     "print(\"           Frequency:\", f_min0,  \"-\", f_max0, \"kHz\")\n",
     "print(\"f, width, step (kHz):\", f_min0,  \"-\", f_max0, data.freq_width[0][0], data.freq_step[0][0])\n",
-    "print(\"                      [BAND0] \", 'start {:4d} '.format(data.B0_startf[0]), 'stop {:5d} '.format(data.B0_stopf[0]), 'step {:3d} '.format(data.B0_step[0]), 'repeat {:2d} '.format(data.B0_repeat[0]),  'subdiv {:2d}'.format(data.B0_subdiv[0]), ) \n",
     "\n",
-    "N_ch0     = data.U_selected[0] + data.V_selected[0] + data.W_selected[0]\n",
-    "print(\"                  Ch:\", N_ch0, \"  [U:\", data.U_selected[0], \"  V:\", data.V_selected[0], \"  W:\", data.W_selected[0], \"]\")\n",
+    "# N_ch0     = data.U_selected[0] + data.V_selected[0] + data.W_selected[0]\n",
+    "print(\"                  Ch:\", data.ch_selected[0])\n",
     "#\n",
-    "N_frequency = np.int32(data.B0_step[0] * data.B0_subdiv[0] / data.subdiv_reduction[0])\n",
+    "N_frequency = data.n_step \n",
     "N_component = 1;    print(\"       ==> Component:\", N_component)"
    ]
   },
@@ -262,7 +261,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"N_samp:\", data.N_samp[0], \"   decimation:\", juice_cdf._sample_rate(data.decimation[0]))\n",
+    "# print(\"N_samp:\", data.N_samp[0], \"   decimation:\", juice_cdf._sample_rate(data.decimation[0]))\n",
     "peak_E = np.ravel(spec.EE[:][:]); peak_f = np.nanargmax(peak_E)\n",
     "print(\"Peak EE:\", '{:.2e}'.format(peak_E[peak_f]), spec.str_unit, ' {:.2e}'.format(peak_E[peak_f]**.5), '  |  {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])), spec.str_unit, ' {:.2e}'.format( (peak_E[peak_f-2]+peak_E[peak_f-1]+peak_E[peak_f]+peak_E[peak_f+1]+peak_E[peak_f+2])**.5))\n",
     "if unit_mode==0:\n",
