--- a/JUICE-CDF-HF-SID7_sample.ipynb
+++ b/JUICE-CDF-HF-SID7_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID7 (PSSR3 surv): L1a QL -- 2025/6/29"
+    "# JUICE RPWI HF SID7 (PSSR3 surv): L1a QL -- 2025/7/5"
    ]
   },
   {
@@ -74,23 +74,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# *** Mode set ***\n",
-    "band_mode = 0                           # 0: sum    1: /Hz\n",
-    "unit_mode = 0                           # 0: raw    1: dBm＠ADC  2: V@HF   3:V2@HF   4:V2@RWI\n",
-    "f_mode = 0                              # 0: linear   1:log  in frequency\n",
+    "# *** Plot dump ***\n",
     "dump_mode = 1                           # 0: no-dump  1:plot dump\n",
-    "\n",
+    "# *** CAL set ***\n",
+    "unit_mode = 0                           # 0: raw    1: dBm＠ADC  2: V@HF   3:V2@HF   4:V2@RWI\n",
+    "band_mode = 0                           # 0: sum    1: /Hz\n",
+    "cal_mode  = 2                           # [Power]     0: background   1: CAL     2: all\n",
+    "# *** Unit set ***\n",
+    "time_mode = 0                           # [Time]      0: Epoch   1: data number\n",
+    "gap_mode  = 0                           # [gap]       0: n/a     1: gap\n",
     "# *** Parameter set ***\n",
-    "cal = 0                                 # 0: background     1: CAL\n",
     "p_raw_max = 8.5                         # background: 7.5   CAL: 10\n",
     "p_raw_min = 1.0                         # background: 2.5   CAL: 5\n",
-    "\n",
-    "# *** Conversion factor: cal_mode ***\n",
-    "# cf, p_max0, p_min0, str_unit = juice_cdf.cal_factors(unit_mode, p_raw_max, p_raw_min)\n",
-    "# print(\"conversion factor:\", cf, \"    MAX-min:\", p_max0, p_min0, \"   str_unit:\", str_unit)\n",
-    "\n",
     "# *** Directory set: set by User ***\n",
     "work_dir = '/Users/user/0-python/JUICE_python/ql/'   # Plot dump folder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "945519d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f_min     = 0000                        # [Frequency sel]   max - min\n",
+    "f_max     = 45000                       # [Frequency sel]   max - min"
    ]
   },
   {
@@ -151,16 +159,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = juice_sid7.hf_sid7_shaping(data)\n",
-    "\n",
+    "data = juice_sid7.hf_sid7_shaping(data, f_max, f_min)\n",
     "date1 = data.epoch[0];  date1 = date1.strftime('%Y/%m/%d %R:%S')\n",
     "date2 = data.epoch[-1]; date2 = date2.strftime('%Y/%m/%d %R:%S')\n",
     "str_date = date1 + \"  -  \" + date2;  print(str_date)\n",
-    "\n",
     "n_time0 = data.n_time - 1\n",
-    "n_block0 = data.N_block[0]\n",
-    "n_length0 = data.N_samp[0]\n",
-    "freq_center = data.freq_center[0]\n",
+    "freq_center = data.freq_center[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc618243",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if data.n_time>1:\n",
+    "    date3 = data.epoch[1];  date3 = date3.strftime('%Y/%m/%d %R:%S')\n",
+    "    print(\"       date and time:\", str_date, \"(interval:\", data.epoch[1] - data.epoch[0], date3, \")\")\n",
+    "else:\n",
+    "    print(\"       date and time:\", str_date)\n",
     "print(\"data size:\", data.auto_corr.shape, \" frequency_center:\", freq_center, \"[kHz]\")"
    ]
   },
@@ -181,30 +199,33 @@
    "outputs": [],
    "source": [
     "fig = plt.figure(figsize=(14, 11))\n",
-    "ax1 = fig.add_subplot(3, 1, 1);  ax2 = fig.add_subplot(3, 1, 3);  ax3 = fig.add_subplot(3, 1, 2)\n",
+    "ax1 = fig.add_subplot(5, 1, 1);  ax2 = fig.add_subplot(5, 1, 2);  ax3 = fig.add_subplot(5, 1, 3)\n",
+    "ax4 = fig.add_subplot(5, 1, 4);  ax5 = fig.add_subplot(5, 1, 5)\n",
     "\n",
-    "ax1.plot(np.ravel(data.auto_corr[:][:]), linewidth=.5, label='auto_corr')\n",
-    "ax2.plot(np.ravel(data.epoch[:]), '.')\n",
-    "ax3.plot(np.ravel(data.T_HF_FPGA),  ':r', label='T (HK-FPGA)')\n",
-    "ax3.plot(np.ravel(data.T_RWI_CH1),  ':b', label='T (RWI1)')\n",
-    "ax3.plot(np.ravel(data.T_RWI_CH2),  ':g', label='T (RWI2)')\n",
-    "ax1.set_ylabel('AutoCorr');  ax3.set_ylabel('T [degC]')\n",
-    "ax2.set_xlabel(str_date)\n",
+    "ax1.plot(np.ravel(data.E_i[:][:]),   '-r',    linewidth=.5, label='E_i')\n",
+    "ax1.plot(np.ravel(data.E_q[:][:]),   '-g',    linewidth=.5, label='E_q')\n",
+    "ax2.plot(np.ravel(data.auto_corr[:][:]),      linewidth=.5, label='auto_corr')\n",
+    "ax3.plot(np.ravel(data.time[:][:]),           linewidth=.5, label='time')\n",
+    "ax4.plot(np.ravel(data.time_block[:][:]), linewidth=.5, label='time_autocorr')\n",
+    "ax5.plot(np.ravel(data.epoch[:]), '.')\n",
+    "ax1.set_ylabel('E_i & E_q')\n",
+    "ax2.set_ylabel('AutoCorr')\n",
+    "ax3.set_ylabel('time [sec]')\n",
+    "ax4.set_ylabel('time_auto_corr [sec]')\n",
+    "ax5.set_ylabel('Date-Time')\n",
+    "ax5.set_xlabel(str_date)\n",
     "#\n",
     "title_label = '[JUICE/RPWI HF PSSR3-Surv (SID-7)]  ' + data_name;  ax1.set_title(title_label)\n",
     "ax1.legend(loc='upper right', fontsize=8); ax3.legend(loc='upper right', fontsize=8); \n",
-    "\n",
-    "xlim=[-.5, len(np.ravel(data.auto_corr)) -.5]; print(xlim); ax1.set_xlim(xlim)\n",
-    "xlim=[-.5, len(np.ravel(data.epoch))     -.5]; print(xlim); ax2.set_xlim(xlim); ax3.set_xlim(xlim)\n",
+    "# xlim=[-.5, len(np.ravel(data.auto_corr)) -.5]; print(xlim); ax1.set_xlim(xlim)\n",
+    "# xlim=[-.5, len(np.ravel(data.epoch))     -.5]; print(xlim); ax2.set_xlim(xlim); ax3.set_xlim(xlim)\n",
     "# ylim=[10**p_raw_min, 10**p_raw_max];  ax1.set_ylim(ylim)\n",
     "\n",
     "# Plot\n",
     "fig.show\n",
     "if dump_mode == 1:\n",
     "    png_fname = work_dir+data_name+'_raw.png'\n",
-    "    fig.savefig(png_fname)\n",
-    "\n",
-    "# print(data.T_HF_FPGA, data.T_RWI_CH1, data.T_RWI_CH2)"
+    "    fig.savefig(png_fname)"
    ]
   },
   {
@@ -482,10 +503,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_num = data.n_time * data.N_block[0]\n",
+    "n_num = data.n_time * data.n_block\n",
     "num_1d = np.arange(n_num)\n",
     "auto_corr_2d = np.ravel(data.auto_corr)\n",
-    "auto_corr_2d = auto_corr_2d.reshape(n_num, data.N_lag[0]).transpose()\n",
+    "auto_corr_2d = auto_corr_2d.reshape(n_num, data.n_lag).transpose()\n",
     "\n",
     "fig2d = plt.figure(figsize=[16,11])\n",
     "ax1 = fig2d.add_subplot(1, 1, 1); \n",
