--- a/JUICE-CDF-HF-geometry.ipynb
+++ b/JUICE-CDF-HF-geometry.ipynb
@@ -71,7 +71,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "name_dir = '/Users/user/D-Univ/data/data-JUICE/geometry/'\n",
+    "name_dir = './mk/' #/Users/user/D-Univ/data/data-JUICE/geometry/'\n",
     "name_file, name_target, name_observer, name_frame = juice_spice.name_geometry(ID_target, ID_observer, ID_frame, Epoch_min, Epoch_max)\n",
     "name_geometry_file = name_dir + name_file\n",
     "print(name_geometry_file)"
