--- a/JUICE-CDF-HF-SID4-20_sample.ipynb
+++ b/JUICE-CDF-HF-SID4-20_sample.ipynb
@@ -138,8 +138,8 @@
     "# *** Flight data: Ver.2 ***\n",
     "# date='20240126';  ver = 'V02'\n",
     "# date='20240706';  ver = 'V02'\n",
-    "date='20240819';  ver = 'V02'\n",
-    "# date='0';  ver = 'V02'\n",
+    "# date='20240819';  ver = 'V02'\n",
+    "date='0';  ver = 'V02'\n",
     "sid = 20\n",
     "data_dir, data_name_list = juice_data.datalist(date, ver, sid)       # [date]   yyyymmdd: group read    others: file list"
    ]
@@ -194,18 +194,13 @@
     "print(\"           data size:\", data.EuEu.shape, \"  [ Num-samples:\", n_time0, \"  Num-Frequency:\", n_freq0, \" (SID:\", sid, \") ]\")\n",
     "print(\"           Frequency:\", f_min0,  \"-\", f_max0, \"kHz\")\n",
     "print(\"f, width, step (kHz):\", f_min0,  \"-\", f_max0, data.freq_width[0][0], data.freq_step[0][0])\n",
-    "print(\"                      [BAND0] \", 'start {:4d} '.format(data.B0_startf[0]), 'stop {:5d} '.format(data.B0_stopf[0]), 'step {:3d} '.format(data.B0_step[0]), 'repeat {:2d} '.format(data.B0_repeat[0]),  'subdiv {:2d}'.format(data.B0_subdiv[0]), ) \n",
-    "if (sid==20):\n",
-    "    print(\"                      [BAND1] \", 'start {:4d} '.format(data.B1_startf[0]), 'stop {:5d} '.format(data.B1_stopf[0]), 'step {:3d} '.format(data.B1_step[0]), 'repeat {:2d} '.format(data.B1_repeat[0]),  'subdiv {:2d}'.format(data.B1_subdiv[0]), ) \n",
-    "    print(\"                      [BAND2] \", 'start {:4d} '.format(data.B2_startf[0]), 'stop {:5d} '.format(data.B2_stopf[0]), 'step {:3d} '.format(data.B2_step[0]), 'repeat {:2d} '.format(data.B2_repeat[0]),  'subdiv {:2d}'.format(data.B2_subdiv[0]), ) \n",
-    "    print(\"                      [BAND3] \", 'start {:4d} '.format(data.B3_startf[0]), 'stop {:5d} '.format(data.B3_stopf[0]), 'step {:3d} '.format(data.B3_step[0]), 'repeat {:2d} '.format(data.B3_repeat[0]),  'subdiv {:2d}'.format(data.B3_subdiv[0]), ) \n",
-    "    print(\"                      [BAND4] \", 'start {:4d} '.format(data.B4_startf[0]), 'stop {:5d} '.format(data.B4_stopf[0]), 'step {:3d} '.format(data.B4_step[0]), 'repeat {:2d} '.format(data.B4_repeat[0]),  'subdiv {:2d}'.format(data.B4_subdiv[0]), ) \n",
     "\n",
     "if N_ch0     > 3:   N_ch0     = data.U_selected[0] + data.V_selected[0] + data.W_selected[0]\n",
     "if comp_mode > 3:   comp_mode = data.complex[0]\n",
     "print(\"                  Ch:\", N_ch0, \"  [U:\", data.U_selected[0], \"  V:\", data.V_selected[0], \"  W:\", data.W_selected[0], \"]\")\n",
     "#\n",
-    "N_frequency = data.B0_step[0] * data.B0_subdiv[0]\n",
+    "# N_frequency = data.B0_step[0] * data.B0_subdiv[0]\n",
+    "N_frequency = data.frequency.shape[1]\n",
     "if (comp_mode == 0):\n",
     "    if N_ch0 == 3:\n",
     "        print(\"             complex:\", comp_mode, \" (power 3-ch) <Table 6.3.2>\")\n",
@@ -238,15 +233,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if data.T_HF_FPGA.size < 2:\n",
-    "   T_HF  = data.T_HF_FPGA;              T_RWI = (data.T_RWI_CH1 + data.T_RWI_CH2)/2\n",
-    "else:\n",
-    "   T_HF  = data.T_HF_FPGA[n_time0//2];  T_RWI = (data.T_RWI_CH1[n_time0//2] + data.T_RWI_CH2[n_time0//2])/2\n",
-    "   print(\"Temperature(org): \", 'HF - {:.1f}'.format(T_HF), '  RWI - {:.1f}'.format(T_RWI))\n",
-    "   if T_HF  > 199 or T_HF  < -50 or math.isnan(T_HF):\n",
-    "      T_HF  = 25;  data.T_HF_FPGA[:] = math.nan\n",
-    "   if T_RWI > 199 or T_RWI < -199 or math.isnan(T_RWI):\n",
-    "      T_RWI = 25;  data.T_RWI_CH1[:] = math.nan;  data.T_RWI_CH2[:] = math.nan\n",
+    "T_HF  = data.T_HF_FPGA[n_time0//2];  T_RWI = (data.T_RWI_CH1[n_time0//2] + data.T_RWI_CH2[n_time0//2])/2\n",
+    "print(\"Temperature(org): \", 'HF - {:.1f}'.format(T_HF), '  RWI - {:.1f}'.format(T_RWI))\n",
+    "if T_HF  > 199 or T_HF  < -50 or math.isnan(T_HF):\n",
+    "   T_HF  = 25;  data.T_HF_FPGA[:] = math.nan\n",
+    "if T_RWI > 199 or T_RWI < -199 or math.isnan(T_RWI):\n",
+    "   T_RWI = 25;  data.T_RWI_CH1[:] = math.nan;  data.T_RWI_CH2[:] = math.nan\n",
     "print(\"Temperature(cal): \", 'HF - {:.1f}'.format(T_HF), '  RWI - {:.1f}'.format(T_RWI))"
    ]
   },
